# QtProject

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  res.qrc
control/: ComponentPage_03.qml  ControlPage_00.qml  ImagePage_05.qml  LoaderPage_04.qml  SecondPage.qml
output/: QtProjectApp
qml/: HomePage.qml  ItemPage.qml  Main.qml  RectanglePage.qml  SecondPage.qml  Window.qml
qml/control/: AnimationPage_09.qml  ButtonPage_07.qml  ComponentPage_03.qml  ControlPage_00.qml  LoaderPage_04.qml  RowLayoutPage_08.qml  TextPage_06.qml  TimerPage_10.qml
qml/inherit/: InheritPage_00.qml  QmlElementPage_02.qml  QmlRegisterTypePage_01.qml
qml/widget/: AnimButton.qml  CommonMarquee.qml  RoundImage.qml  SeamlessMarquee.qml  TitleBar.qml
src/inherit/: DataManager.cpp  DataManager.h  Person.cpp  Person.h  data_view_model.cpp  data_view_model.h
